# todolist

./: .docker_env  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yml  build_and_deploy.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose.prod.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0002_goal.py  0003_crate_new_objects.py  0004_alter_goalcategory_board.py
tests/: conftest.py  factories.py  utils.py
tests/core/: conftest.py
tests/core/views/: user_login_test.py  user_profile_test.py  user_signup_test.py  user_update_password_test.py
tests/goals/views/: board_create_test.py  board_list_test.py  board_test.py  comment_create_test.py  comment_list_test.py  comment_test.py  goal_category_create_test.py  goal_category_list_test.py  goal_category_test.py  goal_create_test.py  goal_list_test.py  goal_test.py
todolist/: settings.py  urls.py
